[gd_scene load_steps=3 format=3 uid="uid://b7t2wd7j2s0ql"]

[ext_resource type="Script" uid="uid://0nsdalsopfn" path="res://Source/selection_zone.gd" id="1_g1yt1"]
[ext_resource type="Texture2D" uid="uid://d7e64jcf5p0v" path="res://Assets/Selection.png" id="2_665xi"]

[node name="SelectionZone" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_g1yt1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(7.15256e-07, 7.15256e-07)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("2_665xi")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
